--- a/src/Section.css
+++ b/src/Section.css
@@ -1,15 +1,20 @@
 .section {
-    display: flex;
-    align-items: center;
-    border-bottom-width: 2px;
-    padding-right: 15px;
-    min-width: 200px;
-    cursor: pointer;
-    color: grey;
-    border-width: 0 !important;
+  display: flex;
+  align-items: center;
+  border-bottom-width: 2px;
+  padding-right: 15px;
+  min-width: 200px;
+  cursor: pointer;
+  color: grey;
+  border-width: 0 !important;
 }
 
 .section--selected {
-    background-color: whitesmoke;
-    border-width: 3px !important;
+  background-color: whitesmoke;
+  border-width: 3px !important;
+}
+
+.section:hover {
+  background-color: whitesmoke;
+  border-width: 3px !important;
 }
