--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,4 +1,4 @@
-/* .Sidebar {
+.Sidebar {
   flex: 0.3;
   max-width: 300px;
   padding-right: 20px;
@@ -18,4 +18,4 @@
 .sidebar_footer {
   display: flex;
   justify-content: center;
-} */
+}
