--- a/src/EmailRow.css
+++ b/src/EmailRow.css
@@ -12,13 +12,14 @@
   box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.24);
 }
 
-.emailRow_options {
+.emailRow__options {
   display: flex;
 }
+
 .emailRow__message {
   display: flex;
   flex: 0.8;
-  align-items: center ;
+  align-items: center;
   font-size: 13px;
 }
 
@@ -30,14 +31,16 @@
   padding-left: 5px;
   padding-right: 5px;
 }
+
 .emailRow__title {
   font-size: 13px;
   flex: 0.3;
 }
+
 .emailRow__time {
   padding-right: 15px;
-  font-size: 9px;
   font-weight: bold;
+  font-size: 9px;
 }
 
 .emailRow__description {
