--- a/src/Section.css
+++ b/src/Section.css
@@ -1,12 +1,12 @@
 .section {
   display: flex;
-  align-items: center;
   border-bottom-width: 2px;
   padding: 15px;
   min-width: 200px;
   cursor: pointer;
-  color: grey;
-  border-width: 0 !important;
+  align-items: center;
+  color: gray;
+  border-width: 0px !important;
 }
 
 .section--selected {
